Use com.palantir.external-publish-intellij for idea plugins (#1127)